<resources>
    <string name="app_name">Stock Diary</string>
    <string name="motto">Be a disciplined investor</string>
    <string name="watch_list">Watchlist</string>
    <string name="portfolio">Portfolio</string>
    <string name="diary">Diary</string>
    <string name="not_available">N/A</string>
    <string name="place_holder">_</string>

    <string name="portfolio_label">PORTFOLIO</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="add_transactions">Add Transactions</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_price">Enter price</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="shares">SHARES</string>
    <string name="total_value">TOTAL VALUE</string>
    <string name="transaction_history">TRANSACTION HISTORY</string>

    <string name="about">ABOUT</string>
    <string name="sector">SECTOR</string>
    <string name="industry">INDUSTRY</string>
    <string name="CEO">CEO</string>
    <string name="exchange">EXCHANGE</string>

    <string name="stats">STATS</string>
    <string name="open_price">OPEN</string>
    <string name="high_price">HIGH</string>
    <string name="low_price">LOW</string>
    <string name="year_high_price">52W HIGH</string>
    <string name="year_low_price">52W LOW</string>
    <string name="volume">VOLUME</string>
    <string name="average_volume">AVG VOLUME</string>
    <string name="market_cap">MARKET CAP</string>
    <string name="beta">BETA</string>
    <string name="eps">EPS</string>
    <string name="eps_date">EPS DATE</string>
    <string name="dividend_yield">DIV. YIELD</string>
    <string name="price_earning">P/E</string>
    <string name="price_to_book">PRICE/BOOK</string>

    <string name="image_button_description">Add or remove stock from watchlist</string>
    <string name="enter_transaction">Enter Transaction</string>

    <string name="ticker">TICKER</string>
    <string name="equity">EQUITY</string>
</resources>
